--- a/MQTTcontrolNode/config.h.example
+++ b/MQTTcontrolNode/config.h.example
@@ -9,12 +9,12 @@ IPAddress server(192, 168, 0, 7);
 /* 
  * PIN config
  * 因為有使用 w5100
- * 要避開PIN 4、10、50、51、52 (Mega 2560)
+ * 要避開PIN 4、10、50、51、52、53 (Mega 2560)
  * 要避開PIN 4、10、11、12、13 (UNO)
  */
-#define PIN_LIGHT_0 2
-#define PIN_LIGHT_1 3
-#define PIN_LIGHT_2 5
-#define PIN_DOOR_0 6
-#define PIN_AIR_CONDITIONING_0 7
-#define PIN_INFRARED_TRANSMITTER_0 8
+#define PIN_LIGHT_0 5
+#define PIN_LIGHT_1 6
+#define PIN_LIGHT_2 7
+#define PIN_DOOR_0 8
+#define PIN_AIR_CONDITIONING_0 9
+#define PIN_INFRARED_TRANSMITTER_0 3
