改成使用 Android Yun 版

--- a/MQTTcontrolNode/config.h.example
+++ b/MQTTcontrolNode/config.h.example
@@ -1,14 +1,10 @@
 // network config
 
-#define USE_DHCP true
-
-byte mac[] = { 0xDE, 0xED, 0xBA, 0xFE, 0xFE, 0xED };
-IPAddress ip(192, 168, 0, 150);
 IPAddress server(192, 168, 0, 7);
 
 /* 
  * PIN config
- * 因為有使用 w5100
+ * 如果使用 w5100
  * 要避開PIN 4、10、50、51、52、53 (Mega 2560)
  * 要避開PIN 4、10、11、12、13 (UNO)
  */
